# Collatz

./: .gitignore  pyproject.toml  readme.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/collatz/: three_n_plus_one.py
test/: test_3np1.py
