[metadata]
name = collatz
description = iterate through hailstone numbers
author = David Chu
platforms = linux

[options]
packages = 
    collatz
python_requires = >=3.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.4

[options.package_data]
collatz = py.typed

[flake8]
max-line-length = 160